<resources>
    <string name="facebook_app_id">916102948459538</string>
    <string name="twitter_api_key">wr8t6lPMxtC09uMpIEayM5FBC</string>
    <integer name="com_vk_sdk_AppId">5171950</integer>
    <string name="app_name">uPods</string>
    <string name="profile_my_profile">My Profile</string>
    <string name="profile_followed_stations">Followed Stations</string>
    <string name="profile_downloaded">Downloaded</string>
    <string name="profile_subscribed">Subscribed Podcasts</string>
    <string name="radio_main">Radio</string>
    <string name="radio_discover">Discover</string>
    <string name="radio_featured">Featured</string>
    <string name="podcasts_main">Podcasts</string>
    <string name="podcasts_audio">Audio Podcasts</string>
    <string name="podcasts_video">Video Podcasts</string>
    <string name="cloud_sync">Cloud Sync</string>
    <string name="cloud_synchronization">Sync in progress</string>
    <string name="main_rate_app">Rate App</string>
    <string name="main_about">About App</string>
    <string name="main_help">Help</string>
    <string name="main_settings">Settings</string>
    <string name="genres">GENRES</string>
    <string name="countries">COUNTRIES</string>
    <string name="languages">LANGUAGES</string>
    <string name="podcasts">Podcasts</string>
    <string name="search_results">Search results</string>
    <string name="media_action">Media action</string>
    <string name="action_settings">Settings</string>
    <string name="top40_chanels">Top 40 Radio Stations</string>
    <string name="top40_chanels_subheader">The top internet radio stations</string>
    <string name="description">Description</string>
    <string name="title_activity_activity_player">ActivityPlayer</string>
    <string name="top40_podcasts_subheader">The hand made podcasts top</string>
    <string name="hello_world">Hello world!</string>
    <string name="page_featured">Featured</string>
    <string name="page_categories">Categories</string>
    <string name="page_favorites">Favorites</string>
    <string name="page_downloaded">Downloaded</string>
    <string name="nothing_found">Nothing found</string>
    <string name="start_typing">Start typing</string>
    <string name="btn_more">More</string>
    <string name="top40_podcasts">Top 40 Podcasts</string>
    <string name="top40_podcasts_long">Best iTunes Ranking Podcasts</string>
    <string name="download">Download</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="unsubscribe">UNSUBSCRIBED</string>
    <string name="play">Play</string>
    <string name="subscribed">SUBSCRIBED</string>
    <string name="downloaded">DOWNLOADED</string>
    <string name="recently_subscribed">Recently subscribed</string>
    <string name="recently_downloaded">Recently downloaded</string>
    <string name="none">none</string>
    <string name="categories">Categories</string>
    <string name="categories_example">News and Politics</string>
    <string name="episod_notes">Episod notes</string>
    <string name="ok">OK</string>
    <string name="stream">Stream</string>
    <string name="about_podcast">About podcast</string>
    <string name="open_on_disk">Open on disk</string>
    <string name="remove_all_episods">Remove all episodes</string>
    <string name="cancel">Cancel</string>
    <string name="remove_podcast_conformation">Are you sure you want to delete all downloaded episodes for this podcast?</string>
    <string name="delete">Delete</string>
    <string name="episod_removed">Episod removed</string>
    <string name="marks_as_played">Mark played</string>
    <string name="page_subscribed">Subscribed</string>
    <string name="page_recent">Recent</string>
    <string name="recently_played">Recently played</string>
    <string name="now_paying">Now playing</string>
    <string name="buffering">Buffering...</string>
    <string name="kbps">" Kbps"</string>
    <string name="login_with_vk">Log in with Vkontakte</string>
    <string name="no_internet_access">No internet access</string>
    <string name="cant_play">Can\'t play current</string>
    <string name="podcast_small">podcast</string>
    <string name="radio_station">radio station</string>
    <string name="please_try_later">Please try again later.</string>
    <string name="oops">Ooops</string>
    <string name="anonymus">Anonymus</string>
    <string name="anonymus_email">unknown</string>
    <string name="global">Global</string>
    <string name="start_screen">Start screen</string>
    <string name="radio_station_ucfirst">Radio Stations</string>
    <string name="checking_new_episods_rate">Checking for new episodes rate</string>
    <string name="notify_episods">Notify about new episodes</string>
    <string name="there_are">"There are   "</string>
    <string name="new_episodes">new episodes</string>
    <string name="new_episode">new episodes</string>
    <string name="add_radio_station">Add radio station</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="add_podcast">Add podcast</string>
    <string name="title_too_short">The title is too short</string>
    <string name="url_not_correct">The url is not correct</string>
    <string name="radio_added">Radio station added to subscribed</string>
    <string name="podcast_added">Podcast added to subscribed</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="version">Version</string>
    <string name="build">build</string>
    <string name="select_stream_quality">Select stream quality</string>
    <string name="stream_info">Info about stream</string>
    <string name="select">Select</string>
    <string name="not_available_for_stream">Not available for this stream</string>
    <string name="default_stream_quality">Default stream quality</string>
    <string name="show_notes">Show notes</string>
    <string name="fetching_info">Fetching Info</string>
    <string name="please_wait">Please Wait</string>
    <string name="subscribed_radio_stations">Subscribed radio stations</string>
    <string name="subscribed_podcasts">Subscribed podcasts</string>
    <string name="downloaded_podcasts">Downloaded podcasts</string>
    <string name="last_sync_with_cloud">Last sync with cloud</string>
    <string name="logout">Logout</string>
    <string name="sync">Sync</string>
    <string name="syncing">Syncing...</string>
    <string name="profile">Profile</string>
    <string name="open_pod_folder">Open podcasts folder</string>
    <string name="enjoy_free_music">Enjoy Free Music</string>
    <string name="help_free_music">More than 30k of best online radio staitons and direct acsess to itunes podcasts database</string>
    <string name="handmade_tops">Hand Made Tops</string>
    <string name="help_handmade_tops">We are building all our tops manually,\n based on social media trends,\n and our experience in radio</string>
    <string name="zero_ads">No Advertise</string>
    <string name="help_zero_ads">We are not showing any annoying\n advertise in our app. At all.\n And never will add them</string>
    <string name="help_cloud_sync_title">Cloud Sync</string>
    <string name="help_cloud_sync">Sync your profile across all devices. Desktop and IOS versions are coming soon</string>
    <string name="empty_dowloaded_podcasts">All your downloaded podcasts will be shown here</string>
    <string name="empty_favorite_podcasts">Add podcasts to favorite and it will be shown here</string>
    <string name="empty_radio_subscribed">Your subscribed radio stations will be here</string>
    <string name="empty_radio_recent">Start listening radio stations. Your recent one will be added here</string>
    <string name="recent_raio_station">Recent radio stations</string>
    <string name="save_to_cloud">Save To Cloud</string>
    <string name="podcasts_default_folder">podcasts_default_folder</string>
    <string name="upods">UPODS</string>
    <string name="restore_from_cloud">Restore From Cloud</string>
    <string name="empty_description">There is no description for this radio station</string>
    <string name="permissions_not_granted">Permissions not granted</string>
    <string name="phone_state_permissions">Phone State</string>
    <string name="phone_state_description">We need permission to read your phone state in order to automatically pause music when you receiving call. Please allow it in next popup</string>
    <string name="write_external_permissions">External storage permission</string>
    <string name="write_external_description">We need permissions to write external storage in order to download podcasts. Please allow it in next popup</string>
    <string name="tops_language">Tops language</string>
    <string name="key_tops_lng">tops_lng</string>
    <string name="search_hint">Search</string>
    <string name="clcik_back_exit">Please click BACK again to exit</string>
    <string name="unknown">unknown</string>
    <string name="cant_get_info">Can\'t get stream info. Please try again later</string>
    <string name="logged_out_header_text">Logged out</string>
    <string name="online">Online</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="login_sync">Login in to synchronize across all devices</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_url">Enter URL</string>
    <string name="start_using_app">Start using app</string>
    <string name="email">\nE-mail: apodcasts@gmail.com</string>
    <string name="creators_main">\nAuthors: </string>
    <string name="creators_1">Alon Zilberman</string>
    <string name="creators_2">Alex Berber</string>
    <string name="copy_rights">\n All rights reserved</string>
    <string name="contact_details">\nAny your questions, suggestions, \nwishes and requests send us on e-mail</string>
    <string name="smile_logo">¯\u005C_(ツ)_/¯</string>
    <string name="error_cant_play">Can\'t play media. Please try again later.</string>
</resources>
