<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/global">

        <ListPreference
            android:defaultValue="rs_featured"
            android:dialogTitle="@string/start_screen"
            android:entries="@array/start_screen_preference"
            android:entryValues="@array/start_screen_values"
            android:key="start_screen"
            android:summary="%s"
            android:title="@string/start_screen" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/podcasts">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notify_episods"
            android:title="@string/notify_episods" />

        <ListPreference
            android:defaultValue="24"
            android:dialogTitle="@string/checking_new_episods_rate"
            android:entries="@array/podcasts_update_time_preference"
            android:entryValues="@array/podcasts_update_time_values"
            android:key="podcasts_update_time"
            android:summary="%s"
            android:title="@string/checking_new_episods_rate" />

    </PreferenceCategory>

</PreferenceScreen>