<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:gravity="bottom"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:orientation="horizontal"
    android:weightSum="90">

    <Button
        android:id="@+id/btnRoundedGenres"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_weight="30"
        android:background="@drawable/selector_btn_genres"
        android:text="@string/genres"
        android:textSize="12sp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnRoundedCountries"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="30"
        android:background="@drawable/selector_btn_countries"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/countries"
        android:textSize="12sp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnRoundedLanguages"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_weight="30"
        android:background="@drawable/selector_btn_languages"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/languages"
        android:textSize="12sp"
        android:textColor="@color/white" />
</LinearLayout>