<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:gravity="top|center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgHelpTip"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/help_itunes" />

    <TextView
        android:id="@+id/tvHelpTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/enjoy_free_music"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvHelpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/help_free_music"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnCloseHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/selector_btn_welcome_screen"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/start_using_app"
        android:textColor="@color/white_material"
        android:visibility="visible" />

</LinearLayout>