<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/global_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lnLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:weightSum="100">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/profile_header" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="60"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/light_blue_200"
                android:gravity="center"
                android:padding="10dp"
                android:text="Login in to synchronize across all devices"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnFacebookLogin"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/selector_btn_facebook"
                android:text="@string/login_with_facebook"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnTwitterLogin"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_btn_twitter"
                android:text="@string/login_with_twitter"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnVklogin"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_btn_vk"
                android:text="@string/login_with_vk"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnLogedIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue_800"
            android:paddingTop="30dp">

            <ImageButton
                android:id="@+id/imgProfileArrowLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/selector_white_btn"
                android:padding="10dp"
                android:src="@drawable/ic_action_arrow_left" />

            <ImageButton
                android:id="@+id/imgProfileDots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/selector_white_btn"
                android:padding="10dp"
                android:src="@drawable/ic_dots_vertical_white_24dp" />

            <ImageView
                android:id="@+id/imgAvatar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/imgProfileArrowLeft"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_temp" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgProfileArrowLeft"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_toRightOf="@+id/imgAvatar"
                android:text="Test title"
                android:textColor="@color/white"
                android:textSize="@dimen/default_text_size_18" />

            <TextView
                android:id="@+id/tvUserStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvUserName"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/imgAvatar"
                android:text="Online"
                android:textColor="@color/blue_grey_800"
                android:textSize="@dimen/default_text_size_16" />
        </RelativeLayout>

        <ListView
            android:id="@+id/lvProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:listSelector="@android:color/transparent"></ListView>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>
